Added some js for login functionality. The borders are not becoming red for some reason when sign in is not working. Still need to think about how exaclty I will be laying out my website. I think I want to limit it to two pages: ones own home/info page and a logistic/statistic page

--- a/src/input.css
+++ b/src/input.css
@@ -11,9 +11,29 @@
 }
 
 .input-field {
-    @apply  mb-2 w-full p-2 border border-gray-300 rounded
+    @apply  mb-2 w-full p-2 border border-gray-300 rounded 
 }
 
 .input-field-effect {
     @apply focus:outline-none focus:ring-2 focus:ring-blue-500
+}
+
+.body-login {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background: url('/pictures/pexels-ollivves-931007.jpg') no-repeat;
+    background-size: cover; 
+    background-position: center;
+    background-repeat: no-repeat;
+    
+}
+.body-register {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background: url('/pictures/pexels-packermann-1666021.jpg') no-repeat;
+    background-size: cover;  /* Ensures the image covers the entire background */
+    background-position: center; /* Centers the background image */
+    background-repeat: no-repeat; /* Prevents the image from repeating */
 }
