--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .btn {
-    @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider;
+    @apply rounded-full py-2 px-3 uppercase text-xs font-bold cursor-pointer tracking-wider
 }
 
 .input-box {
@@ -25,15 +25,65 @@
     background: url('/pictures/pexels-ollivves-931007.jpg') no-repeat;
     background-size: cover; 
     background-position: center;
-    background-repeat: no-repeat;
-    
 }
 .body-register {
     margin: 0;
     padding: 0;
     height: 100vh;
     background: url('/pictures/pexels-packermann-1666021.jpg') no-repeat;
-    background-size: cover;  /* Ensures the image covers the entire background */
-    background-position: center; /* Centers the background image */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
+    background-size: cover;  
+    background-position: center;
+}
+
+.body-home {
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    width: 100vw;
+    background: url('/pictures/image5.jpg') no-repeat;
+    background-size: cover;  
+    background-position: center;
+}
+
+.stats{
+    @apply flex items-center bg-white shadow-lg rounded-full py-3 px-6 justify-between w-full max-w-md
+}
+
+.refresh {
+    @apply  bg-gradient-to-r from-green-500 to-green-700 flex justify-center items-center mt-8 shadow-xl hover:scale-105 transform transition-all duration-300 hover:shadow-2xl
+}
+
+.footer-btn {
+    @apply  bg-gradient-to-r from-green-500 to-green-700 flex justify-center items-center mt-8 shadow-xl hover:scale-105 transform transition-all duration-300 hover:shadow-2xl
+}
+
+.bar {
+    @apply w-1/2 h-2 rounded-full mx-4 bg-gradient-to-r flex items-center space-x-4 max-w-lg
+}
+
+.today-text{
+    @apply w-24 text-gray-800
+}
+
+.hidden-element {
+    opacity: 0;
+    transform: translateY(50px);
+    transition: all 0.6s ease-out;
+  }
+
+.slide-in {
+    opacity: 1;
+    transform: translateY(0); 
+  }
+
+.card {
+    @apply bg-white p-10 rounded-3xl shadow-xl flex flex-col items-center space-y-4 max-w-xs hover:scale-105 transform transition-all duration-300 hover:shadow-2xl
+  }
+
+.footer-blur {
+    @apply   bg-green-400/40 backdrop-blur-2xl
+}
+
+.footer-btn {
+    @apply  bg-gradient-to-r from-green-100 to-green-200 flex justify-center items-center mt-8 shadow-xl hover:scale-105 transform transition-all duration-300 hover:shadow-2xl
 }
